[package]
name = "pubsubchub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
google-cloud-gax = "0.19.2"
google-cloud-googleapis = { version = "0.16.0", features = ["pubsub"] }
google-cloud-pubsub = "0.30.0"
juniper = "0.16.1"
once_cell = "1.20.2"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1",  features = ["rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
time = "0.3.36"

[features]
publish = []
consume = []